# Trace-CMake-Build

./: README.md  flamegraph.html  merge_traces.py  process_graph.html  requirements.txt  trace_cmake_build.py  trace_to_chromium.py  trace_to_compile_commands.py  validate_trace.py
.github/workflows/: test.yml
examples/gtest_project/: CMakeLists.txt  README.md  test_main.cpp
